--- a/README
+++ b/README
@@ -46,3 +46,4 @@ WORKFLOW (steps with c at the number are critical, everything else is just my pl
 
 You can use "Justify Center" and font size options to make things look pretty :) Remember, only the actual puzzle need use the monospaced font. Everything else can be anything you like.
 
+Solo Deo gloria. Amen.
